force-app/main/default/objects/Gold_Star__c/Gold_Star__c.object-meta.xml
<CustomObject>
    <label>Gold Star</label>
    <nameField>
        <displayFormat>STAR-{00000}</displayFormat>
        <label>Gold Star Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gold Stars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>