force-app/main/default/objects/Gold_Star__c/fields/Gold_Star_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Gold_Star_Tracking__c</fullName>
    <label>Gold Star Tracking</label>
    <referenceTo>Gold_Star_Tracking__c</referenceTo>
    <relationshipLabel>Gold Stars</relationshipLabel>
    <relationshipName>Gold_Stars</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>