force-app/main/default/objects/Gold_Star__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good drinking habits</fullName>
            </value>
            <value>
                <fullName>Good cleaning habits</fullName>
            </value>
            <value>
                <fullName>Good exercise habits</fullName>
            </value>
            <value>
                <fullName>General good behavior</fullName>
            </value>
            <value>
                <fullName>Penalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>