force-app/main/default/objects/Gold_Star__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Unredeemed&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unredeemed</fullName>
            </value>
            <value>
                <fullName>Redeemed</fullName>
            </value>
            <value>
                <fullName>Penalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>